--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <nav id="navigation_bar">
                 <div class="navigation_bar-col" id="navigation_bar-col-img">
-                    <img src="logo_1.png" alt="logo">
+                    <img src="images/logo_1.png" alt="logo">
                 </div>
                 <input type="checkbox" id="menucheck">
                 <label for="menucheck" id="menucheck_label">☰</label>
@@ -38,7 +38,7 @@
     <main>
         <div id="gym_cover">
 
-            <img src="cover.png" alt="">
+            <img src="images/cover.png" alt="">
         </div>
         <div id="about_us">
             <h1>About Us</h1>
@@ -145,10 +145,10 @@
                 <h2>Meet Our Team</h2>
             </div>
             <div id="team_meat">
-                <div class="team_meat_box"><img src="coach1.jpg" alt="">Amitee Loiselle</div>
-                <div class="team_meat_box"><img src="coach2.jpg" alt="">Liam Harpaul</div>
-                <div class="team_meat_box"><img src="coach3.jpg" alt="">Mark Anthony</div>
-                <div class="team_meat_box"><img src="coach4.jpg" alt="">Mark Anthony</div>
+                <div class="team_meat_box"><img src="images/coach1.jpg" alt="">Amitee Loiselle</div>
+                <div class="team_meat_box"><img src="images/coach2.jpg" alt="">Liam Harpaul</div>
+                <div class="team_meat_box"><img src="images/coach3.jpg" alt="">Mark Anthony</div>
+                <div class="team_meat_box"><img src="images/coach4.jpg" alt="">Mark Anthony</div>
             </div>
         </div>
     </main>
