--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <input type="checkbox" id="menucheck">
                 <label for="menucheck" id="menucheck_label">☰</label>
-                <div class="navigation_bar-col" id-="navigation_bar_col_2">
+                <div class="navigation_bar-col" id="navigation_bar_col_2">
                     <div class="navigation_bar_box">
                         <a href="">Home</a> |
                     </div>
